--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@
     transition: 0.2s ease background-color;
     border-radius: 2px;
     width: 120px;
+    color: var(--text);
     /*color: #fff;*/
     /*font-weight: 700;*/
     /*text-transform: uppercase;*/
